[package]
name = "workshop"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "5.1.0", default-features = false }

erc20 = { path = "erc20", default-features = false, features = ["ink-as-dependency"] }
token_factory = { path = "token_factory", default-features = false, features = ["ink-as-dependency"] }

[dev-dependencies]
ink_e2e = { version = "5.1.0" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "erc20/std",
    "token_factory/std"
]
ink-as-dependency = []

[workspace]
members = [
    "erc20",
    "token_factory",
]

e2e-tests = []
